# potok

./: .gitignore  README.md  docker-compose.yml
.agent/rules/: projeto-base.md
.insprirações/: conceito-design.md  use.md
.prompts/: Init.md
backend/: Dockerfile  Untitled  constants.py  influx_writer.py  logging_config.py  main.py  pyproject.toml  room_manager.py  test_room_manager.py
backend/infra/dev/: Dockerfile
backend/infra/prod/: Dockerfile
config/explorer/: config.json
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: PotoKLogo.tsx  cookie-consent.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/config/: env.ts
frontend/src/lib/: cookies.ts  utils.ts
frontend/src/pages/: Home.tsx  Room.tsx
infra/dev/: docker-compose.yml
infra/prod/: docker-compose.yml
proxy/: Dockerfile  README.md  default.conf
proxy/infra/dev/: Dockerfile  default.conf
proxy/infra/prod/: Dockerfile  default.conf
